[package]
name = "wally-package-types"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.5", features = ["derive"] }
full_moon = { version = "0.15.1", features = ["roblox"] }
serde = "1.0.137"
serde_json = "1.0.81"
