[package]
name = "wally-package-types"
description = "Tool to fix wally package thunks with Luau types"
license = "MIT"
version = "1.1.1"
edition = "2021"

[lib]
name = "wally_package_types"
path = "src/lib.rs"

[[bin]]
name = "wally-package-types"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.5", features = ["derive"] }
full_moon = { version = "0.18.1", features = ["roblox"] }
serde = "1.0.137"
serde_json = "1.0.81"
