[package]
name = "wally-package-types"
description = "Tool to fix wally package thunks with Luau types"
license = "MIT"
version = "1.3.0"
edition = "2021"

[lib]
name = "wally_package_types"
path = "src/lib.rs"

[[bin]]
name = "wally-package-types"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.5", features = ["derive"] }
console = "0.15.7"
env_logger = { version = "0.10.1", default-features = false }
full_moon = { version = "0.19.0", features = ["roblox"] }
log = "0.4.20"
serde = "1.0.137"
serde_json = "1.0.81"
